保存最新版本

--- a/global.ini
+++ b/global.ini
@@ -1,13 +1,23 @@
 [algorithm]
-name = aecnn_CIFAR10
-run_algorithm = aecnn
-max_gen = 3
-pop_size = 3
+;name = p6779_cifar100_0323_50_36_10_runner_z3
+; 规范化了Z3的版本
+name = p6779_cifar10_z3_0324_timecost_002
+; timecost * 0.02
+run_algorithm = MO_evocnn_runner
+max_gen = 50
+pop_size = 42
 
 [redis]
-log_server = 192.168.1.1
-log_server_port = 6379
+log_server = 172.20.144.73
+log_server_port = 6779
 
 [execute]
-exe_path = /home/user/anaconda3/bin/python3
+exe_path = ~/onebinary/nas-runner/bin/python
+exe_keyword = nas-runner
 
+per_gpu_task_max = 3
+
+; conda_env = /center/anaconda3/envs/
+; exe_path = /center/anaconda3/envs/nas-runner/bin/python
+; exe_keyword = nas-runner
+; exe_path = /center/anaconda3/envs/nas-demo/bin/python
