--- a/train/train.ini
+++ b/train/train.ini
@@ -1,7 +1,8 @@
 [optimizer]
 _name = SGD
 _batch_size = 64
-_total_epoch = 3
+_total_epoch = 10
+_full_epoch = 90
 
 [LearningRate]
 lr = 0.025
@@ -9,6 +10,11 @@ lr_strategy = CosineAnnealingLR
 
 [dataset]
 _name = CIFAR10
+
+; 没有作用的配置
 _dir = /home/user/CIFAR10
+
+; 好像也是没有作用的配置
 _input_size = 32,32,3
 
+#_input_size = 32,32,3
